[add] deploy setup

--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,1 +1,1 @@
-{"orgId":"KqNnAYLpKIaMpkS9kNIMbrEu","projectId":"prj_NwcApzYCvvwwIpF8g9ogYEH1qDf2"}
+{"projectId":"prj_HQYfOAgAA4m2p9a7dNb7smVmvbjm","orgId":"KqNnAYLpKIaMpkS9kNIMbrEu"}
